--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<script src="js/libs/jquery.parse.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
 	<script src="js/libs/underscore.js"></script>
+	<script src="js/auth.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
