--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<title>MM Create</title>
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
-	<link href="css/print.css" rel="stylesheet" media="print">
+	<link href="css/desktop.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -16,6 +15,12 @@
 			<div class="col-sm-8">
 				<h1>New Card</h1>
 				<form  id="cardForm">
+					<div class="form-group">
+						<label for="forTitle">Examples</label>
+						<div class="droptarget" id="dropzone">Drag images here
+<br>
+						</div>
+					</div>
 					<div class="form-group">
 						<label for="forTitle">Title</label>
 						<input type="text" class="form-control" id="title" placeholder="Title" value="Sample Title">
@@ -54,6 +59,9 @@
 
 					</div>
 				</form>
+<!-- 				<form action="#"
+				class="dropzone"
+				id="my-awesome-dropzone"></form> -->
 			</div>
 		</div>
 	</div>
