--- a/update.html
+++ b/update.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MM Create</title>
+	<title>MM Update</title>
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.css" rel="stylesheet">
 	<link href="css/desktop.css" rel="stylesheet">
@@ -14,15 +14,40 @@
 		<div class="row">
 			<div class="col-sm-8">
 				<h1>New Card</h1>
+
 				<form  id="cardForm">
 					<div class="form-group">
 						<label for="forTitle">Title</label>
 						<input type="text" class="form-control" id="title" placeholder="Title" value="Sample Title">
 					</div>
-					<div class="form-group">
+					<div class="form-group"  id="hero">
 						<label for="image">Hero Image</label>
+						<br>	
+						<img src="" alt="">
 						<input type="file" id="image">
 					</div>
+					<div class="form-group" id="eg1">
+						<label for="example1">Example 1</label>
+						<br>	
+						<img src="">
+						<input type="text" class="form-control" id="caption1" placeholder="Caption1" value="Lorem">
+						<input type="file" class="example" id="1">
+					</div>	
+					<div class="form-group" id="eg2">
+						<label for="example1">Example 2</label>
+						<br>	
+						<img src="">
+						<input type="text" class="form-control" id="caption2" placeholder="Caption2" value="Ipsum">
+						<input type="file" class="example" id="2">
+					</div>	
+					<div class="form-group" id="eg3">
+						<label for="example1">Example 3</label>
+						<br>	
+						<img src="">
+						<input type="text" class="form-control" id="caption3" placeholder="Caption3" value="Dolor">
+						<input type="file" class="example" id="3">
+					</div>		
+
 					<div class="form-group">
 						<label for="description">Description</label>
 						<textarea class="form-control" id="description" rows="5">Description content</textarea>
@@ -33,10 +58,6 @@
 						<p class="help-block">Use a line break to seperate each goal</p>
 					</div>
 					<div class="form-group">
-						<label for="tips">Tips</label>
-						<textarea class="form-control" id="tips" rows="5" placeholder="Tips"></textarea>
-					</div>
-					<div class="form-group">
 						<label for="category">Category</label>
 						<select class="form-control" id="category"></select>
 					</div>
@@ -44,24 +65,12 @@
 						<label for="tags">Tags</label>
 						<div class="checkbox" id="tags"></div>
 					</div>
-					<div class="form-group">
-						<label for="example1">Example 1</label>
-						<input type="text" class="form-control" id="caption1" placeholder="Caption">
-						<input type="file" class="example" id="1">
-					</div>	
-					<div class="form-group">
-						<label for="example1">Example 2</label>
-						<input type="text" class="form-control" id="caption2" placeholder="Caption">
-						<input type="file" class="example" id="2">
-					</div>	
-					<div class="form-group">
-						<label for="example1">Example 3</label>
-						<input type="text" class="form-control" id="caption3" placeholder="Caption">
-						<input type="file" class="example" id="3">
-					</div>		
+
 					<hr>
 					<div class="form-group">
+
 						<button type="submit" class="btn btn-default" id="submitCard">Save</button>
+
 					</div>
 				</form>
 <!-- 				<form action="#"
@@ -77,6 +86,6 @@
 	<script src="js/libs/underscore.js"></script>
 	<script src="js/libs/dropzone.js"></script>
 	<script src="js/auth.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/update.js"></script>
 </body>
 </html>
